--- a/index_backup1.html
+++ b/index_backup1.html
@@ -247,7 +247,7 @@
              <li data-symbol="al" aria-label="atomic symbol A l" class="bigfont2">A<span class="letter-tight">l</span></li>
              <li data-element="magnesium"><span class="bigfont1" aria-label="element">Aluminum</span></li>
              <li data-weight="26.982"><span class="bigfont1" aria-label="standard atomic weight 26 . 9 8 2 5">26.982</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p">[Ne]3s<sup>2</sup>3p</span></li>
              <li data-ev="5.9858"><span class="bigfont1" aria-label="ionization energy 5 . 9 8 5 8">5.9858</span></li> 
           </ul>
       </td>
@@ -257,7 +257,7 @@
              <li data-symbol="si" aria-label="atomic symbol S i" class="bigfont2">S<span class="letter-tight">i</span></li>
              <li data-element="silicon"><span class="bigfont1" aria-label="element">Silicon</span></li>
              <li data-weight="28.085"><span class="bigfont1" aria-label="standard atomic weight 28 . 0 8 5">28.085</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p 2">[Ne]3s<sup>2</sup>3p<sup>2</sup></span></li>
              <li data-ev="8.1517"><span class="bigfont1" aria-label="ionization energy 8 . 1 5 1 7">8.1517</span></li> 
           </ul>
       </td>
@@ -277,7 +277,7 @@
              <li data-symbol="s" aria-label="atomic symbol S" class="bigfont2">S<span class="letter-tight">&nbsp;</span></li>
              <li data-element="sulfur"><span class="bigfont1" aria-label="element">Sulfur</span></li>
              <li data-weight="32.06"><span class="bigfont1" aria-label="standard atomic weight 32  .0 6">32.06</span></li>
-             <li data-groundstate="sulfur"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sulfur"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p 4">[Ne]3s<sup>2</sup>3p<sup>4</sup></span></li>
              <li data-ev="10.3600"><span class="bigfont1" aria-label="ionization energy 10 . 3 6 0 0">10.3600</span></li> 
           </ul>
       </td>
