--- a/index_ko.html
+++ b/index_ko.html
@@ -165,7 +165,7 @@
              <li data-symbol="c" aria-label="atomic symbol C" class="bigfont2">C<span class="letter-tight">&nbsp;</span></li>
              <li data-element="carbon"><span class="bigfont1" aria-label="element">Carbon</span></li>
              <li data-weight="12.011"><span class="bigfont1" aria-label="standard atomic weight 12 . 0 1 1">12.011</span></li>
-             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground 1s 2 2s 2 2p 2">1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup></span></li>
              <li data-ev="11.2603"><span class="bigfont1" aria-label="ionization energy 11 . 2 6 0 3">11.2603</span></li> 
           </ul>
        </td>
@@ -175,7 +175,7 @@
              <li data-symbol="n" aria-label="atomic symbol N" class="bigfont2">N<span class="letter-tight">&nbsp;</span></li>
              <li data-element="nitrogen"><span class="bigfont1" aria-label="element">Nitrogen</span></li>
              <li data-weight="14.007"><span class="bigfont1" aria-label="standard atomic weight 14 . 0 0 7">14.007</span></li>
-             <li data-groundstate="nitrogen"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="nitrogen"><span class="bigfont1" aria-label="ground 1s22s22p3">1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup></span></li>
              <li data-ev="14.5341"><span class="bigfont1" aria-label="ionization energy 14 . 5 3 4 1">14.5341</span></li> 
           </ul>
        </td>
@@ -185,7 +185,7 @@
              <li data-symbol="o" aria-label="atomic symbol O" class="bigfont2">O<span class="letter-tight">&nbsp;</span></li>
              <li data-element="oxygen"><span class="bigfont1" aria-label="element">Oxygen</span></li>
              <li data-weight="15.999"><span class="bigfont1" aria-label="standard atomic weight 15 . 9 9 9">15.999</span></li>
-             <li data-groundstate="oxygen"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="oxygen"><span class="bigfont1" aria-label="ground 1s 2 2s 2 2p 4">1s<sup>2</sup> 2s<sup>2</sup>2p<sup>4</sup></span></li>
              <li data-ev="13.6181"><span class="bigfont1" aria-label="ionization energy 13 . 6 1 8 1">13.6181</span></li> 
           </ul>
        </td>
@@ -195,7 +195,7 @@
              <li data-symbol="f" aria-label="atomic symbol F" class="bigfont2">F<span class="letter-tight">&nbsp;</span></li>
              <li data-element="flourine"><span class="bigfont1" aria-label="element">Flourine</span></li>
              <li data-weight="18.998"><span class="bigfont1" aria-label="standard atomic weight 18. 9 9 8 9">18.998</span></li>
-             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground 1s2 2s2 2p5">1s<sup>2</sup>2s<sup>2</sup> 2p<sup>5</sup></span></li>
              <li data-ev="17.4228"><span class="bigfont1" aria-label="ionization energy 17 . 4 2 2 8">17.4228</span></li> 
           </ul>
        </td>
@@ -205,7 +205,7 @@
              <li data-symbol="ne" aria-label="atomic symbol N e" class="bigfont2">N<span class="letter-tight">e</span></li>
              <li data-element="neon"><span class="bigfont1" aria-label="element">Neon</span></li>
              <li data-weight="20.180"><span class="bigfont1" aria-label="standard atomic weight 20 . 1 8 0">20.180</span></li>
-             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground 1s 2 2s 2 2p 6">1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup></span></li>
              <li data-ev="21.5645"><span class="bigfont1" aria-label="ionization energy 21 . 5 6 4 5">21.5645</span></li> 
           </ul>
        </td>
@@ -217,7 +217,7 @@
              <li data-symbol="na" aria-label="atomic symbol N a" class="bigfont2">N<span class="letter-tight">a</span></li>
              <li data-element="sodium"><span class="bigfont1" aria-label="element">Sodium</span></li>
              <li data-weight="22.990"><span class="bigfont1" aria-label="standard atomic weight 22 . 9 9 0">22.990</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s">[Ne]3s</span></li>
              <li data-ev="5.1391"><span class="bigfont1" aria-label="ionization energy 5 . 1 3 9 1">5.1391</span></li> 
           </ul>
       </td>
@@ -227,7 +227,7 @@
              <li data-symbol="mg" aria-label="atomic symbol M g" class="bigfont2">M<span class="letter-tight">g</span></li>
              <li data-element="magnesium"><span class="bigfont1" aria-label="element">Magnesium</span></li>
              <li data-weight="24.305"><span class="bigfont1" aria-label="standard atomic weight 24 . 3 0 5">24.305</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s 2">[Ne]3s<sup>2</sup></span></li>
              <li data-ev="7.6462"><span class="bigfont1" aria-label="ionization energy 7 . 6 4 6 2">7.6462</span></li> 
           </ul>
       </td>
@@ -247,7 +247,7 @@
              <li data-symbol="al" aria-label="atomic symbol A l" class="bigfont2">A<span class="letter-tight">l</span></li>
              <li data-element="magnesium"><span class="bigfont1" aria-label="element">Aluminum</span></li>
              <li data-weight="26.982"><span class="bigfont1" aria-label="standard atomic weight 26 . 9 8 2 5">26.982</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p">[Ne]3s<sup>2</sup>3p</span></li>
              <li data-ev="5.9858"><span class="bigfont1" aria-label="ionization energy 5 . 9 8 5 8">5.9858</span></li> 
           </ul>
       </td>
@@ -257,7 +257,7 @@
              <li data-symbol="si" aria-label="atomic symbol S i" class="bigfont2">S<span class="letter-tight">i</span></li>
              <li data-element="silicon"><span class="bigfont1" aria-label="element">Silicon</span></li>
              <li data-weight="28.085"><span class="bigfont1" aria-label="standard atomic weight 28 . 0 8 5">28.085</span></li>
-             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p 2">[Ne]3s<sup>2</sup>3p<sup>2</sup></span></li>
              <li data-ev="8.1517"><span class="bigfont1" aria-label="ionization energy 8 . 1 5 1 7">8.1517</span></li> 
           </ul>
       </td>
@@ -277,7 +277,7 @@
              <li data-symbol="s" aria-label="atomic symbol S" class="bigfont2">S<span class="letter-tight">&nbsp;</span></li>
              <li data-element="sulfur"><span class="bigfont1" aria-label="element">Sulfur</span></li>
              <li data-weight="32.06"><span class="bigfont1" aria-label="standard atomic weight 32  .0 6">32.06</span></li>
-             <li data-groundstate="sulfur"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="sulfur"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p 4">[Ne]3s<sup>2</sup>3p<sup>4</sup></span></li>
              <li data-ev="10.3600"><span class="bigfont1" aria-label="ionization energy 10 . 3 6 0 0">10.3600</span></li> 
           </ul>
       </td>
@@ -287,7 +287,7 @@
              <li data-symbol="cl" aria-label="atomic symbol C l" class="bigfont2">C<span class="letter-tight">l</span></li>
              <li data-element="chlorine"><span class="bigfont1" aria-label="element">Chlorine</span></li>
              <li data-weight="35.45"><span class="bigfont1" aria-label="standard atomic weight 35 . 4 5">35.45</span></li>
-             <li data-groundstate="chlorine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="chlorine"><span class="bigfont1" aria-label="ground [Ne]3s 2 3p 5">[Ne]3s<sup>2</sup>3p<sup>5</sup></span></li>
              <li data-ev="12.9676"><span class="bigfont1" aria-label="ionization energy 12 . 9 6 7 6">12.9676</span></li> 
           </ul>
       </td>
@@ -479,7 +479,7 @@
              <li data-symbol="kr" aria-label="atomic symbol K r" class="bigfont2">K<span class="letter-tight">r</span></li>
              <li data-element="krypton"><span class="bigfont1" aria-label="element">Krypton</span></li>
              <li data-weight="83.798"><span class="bigfont1" aria-label="standard atomic weight 83 . 7 9 8">83.798</span></li>
-             <li data-groundstate="krypton"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="krypton"><span class="bigfont1" aria-label="ground [Ar]3d 10 4s 2 4p 6">[Ar]3d<sup>10</sup>4s<sup>2</sup>4p<sup>6</sup></span></li>
              <li data-ev="13.9996"><span class="bigfont1" aria-label="ionization energy 13 . 9 9 9 6">13.9996</span></li> 
           </ul>
        </td>
@@ -1359,7 +1359,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s" + "<br/>"
         + "Atomic Number: 1"  + "<br/>"
         + "Standard Atomic Weight: 1.008"  + "<br/>"
         + "Ground State Configuration: 1s"  + "<br/>"
@@ -1371,7 +1370,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Helium" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 2"  + "<br/>"
         + "Standard Atomic Weight: 4.0026"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
@@ -1383,7 +1381,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Lithium" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 3"  + "<br/>"
         + "Standard Atomic Weight:  6.94"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
@@ -1395,7 +1392,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Beryllium" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 4"  + "<br/>"
         + "Standard Atomic Weight: 9.0122"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
@@ -1407,7 +1403,6 @@ var text;
         + "<br/>"
         + "<strong>" + "Boron" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 5"  + "<br/>"
         + "Standard Atomic Weight:  10.81"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
@@ -1418,13 +1413,62 @@ var text;
         + "<br/>"
         + "<strong>" + "Carbon" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 6"  + "<br/>"
-        + "Standard Atomic Weight:  10.81"  + "<br/>"
+        + "Standard Atomic Weight:   12.011"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 11.2603"  + "<br/>"
         + "<br/>";
-
+   } else if (letter === "NITROGEN") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Nitrogen" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 7"  + "<br/>"
+        + "Standard Atomic Weight:   14.007"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
+        + "Ionization Energy: 14.5341"  + "<br/>"
+        + "<br/>";
+   } else if (letter === "OXYGEN") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Oxygen" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 8"  + "<br/>"
+        + "Standard Atomic Weight:   15.999"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>4</sup>"  + "<br/>"
+        + "Ionization Energy: 13.6181"  + "<br/>"
+        + "<br/>";
+     } else if (letter === "FLOURINE") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Flourine" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 9"  + "<br/>"
+        + "Standard Atomic Weight: 18.998"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
+        + "Ionization Energy: 17.4228"  + "<br/>"
+        + "<br/>";
+     } else if (letter === "NEON") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Neon" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 10"  + "<br/>"
+        + "Standard Atomic Weight: 18.998"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
+        + "Ionization Energy: 21.5645"  + "<br/>"
+        + "<br/>";
+      } else if (letter === "N.....") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Neon" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 10"  + "<br/>"
+        + "Standard Atomic Weight: 20.180"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
+        + "Ionization Energy: 17.4228"  + "<br/>"
+        + "<br/>";      
+        
    // If the letter is anything else
       
    // If the letter is "b" or "d"
