--- a/index.html
+++ b/index.html
@@ -1468,15 +1468,25 @@ var text;
         + "Ground State Configuration: [Ne]3s"  + "<br/>"
         + "Ionization Energy: 5.1391"  + "<br/>"
         + "<br/>"; 
-        } else if (letter === "Next") {
+      } else if (letter === "MAGNESIUM") {
         text = "<br/>"
         + "<br/>"
-        + "<strong>" + "Neon" + "</strong>"
+        + "<strong>" + "Magnesium" + "</strong>"
         + "<br/>" 
-        + "Atomic Number: 11"  + "<br/>"
-        + "Standard Atomic Weight: 22.990"  + "<br/>"
-        + "Ground State Configuration: [Ne]3s"  + "<br/>"
-        + "Ionization Energy: 5.1391"  + "<br/>"
+        + "Atomic Number: 12"  + "<br/>"
+        + "Standard Atomic Weight: 24.305"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 7.6462"  + "<br/>"
+        + "<br/>"; 
+              } else if (letter === "Next") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Magnesium" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 12"  + "<br/>"
+        + "Standard Atomic Weight: 24.305"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 7.6462"  + "<br/>"
         + "<br/>";  
         
    // If the letter is anything else
