--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1458,16 +1458,36 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
         + "Ionization Energy: 21.5645"  + "<br/>"
         + "<br/>";
-      } else if (letter === "N.....") {
+      } else if (letter === "SODIUM") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Neon" + "</strong>"
         + "<br/>" 
-        + "Atomic Number: 10"  + "<br/>"
-        + "Standard Atomic Weight: 20.180"  + "<br/>"
-        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
-        + "Ionization Energy: 17.4228"  + "<br/>"
-        + "<br/>";      
+        + "Atomic Number: 11"  + "<br/>"
+        + "Standard Atomic Weight: 22.990"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s"  + "<br/>"
+        + "Ionization Energy: 5.1391"  + "<br/>"
+        + "<br/>"; 
+      } else if (letter === "MAGNESIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Magnesium" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 12"  + "<br/>"
+        + "Standard Atomic Weight: 24.305"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 7.6462"  + "<br/>"
+        + "<br/>"; 
+              } else if (letter === "Next") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Magnesium" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 12"  + "<br/>"
+        + "Standard Atomic Weight: 24.305"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 7.6462"  + "<br/>"
+        + "<br/>";  
         
    // If the letter is anything else
       
