--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,17 @@ var text;
         + "Standard Atomic Weight: 26.982"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p"  + "<br/>"
         + "Ionization Energy: 5.9858"  + "<br/>"
-        + "<br/>";  
+        + "<br/>"; 
+      } else if (letter === "SILICON") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Silicon" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 14"  + "<br/>"
+        + "Standard Atomic Weight:  28.085"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 8.1517"  + "<br/>"
+        + "<br/>";    
         
    // If the letter is anything else
       
