--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1478,16 +1478,26 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 7.6462"  + "<br/>"
         + "<br/>"; 
-              } else if (letter === "Next") {
+       } else if (letter === "ALUMINUM") {
         text = "<br/>"
         + "<br/>"
-        + "<strong>" + "Magnesium" + "</strong>"
+        + "<strong>" + "Aluminum" + "</strong>"
         + "<br/>" 
-        + "Atomic Number: 12"  + "<br/>"
-        + "Standard Atomic Weight: 24.305"  + "<br/>"
-        + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
-        + "Ionization Energy: 7.6462"  + "<br/>"
-        + "<br/>";  
+        + "Atomic Number: 13"  + "<br/>"
+        + "Standard Atomic Weight: 26.982"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p"  + "<br/>"
+        + "Ionization Energy: 5.9858"  + "<br/>"
+        + "<br/>"; 
+      } else if (letter === "SILICON") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Silicon" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 14"  + "<br/>"
+        + "Standard Atomic Weight:  28.085"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 8.1517"  + "<br/>"
+        + "<br/>";    
         
    // If the letter is anything else
       
