--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,17 @@ var text;
         + "Standard Atomic Weight:  28.085"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 8.1517"  + "<br/>"
-        + "<br/>";    
+        + "<br/>";
+      } else if (letter === "PHOSPHORUS") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Phosphorus" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 15"  + "<br/>"
+        + "Standard Atomic Weight: 30.974"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>3</sup>"  + "<br/>"
+        + "Ionization Energy: 10.4867"  + "<br/>"
+        + "<br/>";   
         
    // If the letter is anything else
       
