--- a/index.html
+++ b/index.html
@@ -1506,6 +1506,16 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>3</sup>"  + "<br/>"
         + "Ionization Energy: 10.4867"  + "<br/>"
         + "<br/>";   
+      } else if (letter === "SULFUR") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Sulfur" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 16"  + "<br/>"
+        + "Standard Atomic Weight:  32.06"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>4</sup>"  + "<br/>"
+        + "Ionization Energy: 10.3600"  + "<br/>"
+        + "<br/>";  
         
    // If the letter is anything else
       
