--- a/index.html
+++ b/index.html
@@ -1515,7 +1515,17 @@ var text;
         + "Standard Atomic Weight:  32.06"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>4</sup>"  + "<br/>"
         + "Ionization Energy: 10.3600"  + "<br/>"
-        + "<br/>";  
+        + "<br/>";
+      } else if (letter === "CHLORINE") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Chlorine" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 17"  + "<br/>"
+        + "Standard Atomic Weight: 35.45"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
+        + "Ionization Energy: 12.9676"  + "<br/>"
+        + "<br/>"; 
         
    // If the letter is anything else
       
