--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1331,7 +1331,7 @@
  <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 11 February 2020<br />
+        Content: 19 February 2020<br />
         WebAim: 6 February 2020 0<br />
         NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note: Speech Synthesis referenced in builing this page https://www.w3.org/TR/speech-synthesis11/#S1.1<br />
@@ -1339,8 +1339,6 @@
         Note: aural has been scrapped See https://www.w3.org/TR/css3-speech/ <br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
-        ToDo: Fix CU and Ni (28 and 29)<br />
-        ToDo: remove TBD from shell configurationss<br />
         ToDo: Create button for only Atomic # and Atomic Weight<br />
         ToDo: Set up search for two-letter Atomic Symbol<br />
         ToDo: Bring down headers into cells<br />
@@ -1497,7 +1495,37 @@ var text;
         + "Standard Atomic Weight:  28.085"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 8.1517"  + "<br/>"
-        + "<br/>";    
+        + "<br/>";
+      } else if (letter === "PHOSPHORUS") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Phosphorus" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 15"  + "<br/>"
+        + "Standard Atomic Weight: 30.974"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>3</sup>"  + "<br/>"
+        + "Ionization Energy: 10.4867"  + "<br/>"
+        + "<br/>";   
+      } else if (letter === "SULFUR") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Sulfur" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 16"  + "<br/>"
+        + "Standard Atomic Weight:  32.06"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>4</sup>"  + "<br/>"
+        + "Ionization Energy: 10.3600"  + "<br/>"
+        + "<br/>";
+      } else if (letter === "CHLORINE") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Chlorine" + "</strong>"
+        + "<br/>" 
+        + "Atomic Number: 17"  + "<br/>"
+        + "Standard Atomic Weight: 35.45"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
+        + "Ionization Energy: 12.9676"  + "<br/>"
+        + "<br/>"; 
         
    // If the letter is anything else
       
