--- a/index.html
+++ b/index.html
@@ -1355,6 +1355,8 @@ var text;
    if (letter === "HYDROGEN") {
      text = "<br/>"
         + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "H" + "</strong>"
+        + "<br/>"
         + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
         + "Atomic Number: 1"  + "<br/>"
