--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
  <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 19 February 2020<br />
+        Content: 26 February 2020<br />
         WebAim: 6 February 2020 0<br />
         NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note: Speech Synthesis referenced in builing this page https://www.w3.org/TR/speech-synthesis11/#S1.1<br />
@@ -1340,6 +1340,7 @@
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
         ToDo: Create button for only Atomic # and Atomic Weight<br />
+        ToDo: Add dynamic output two-letter Atomic Symbol<br />
         ToDo: Set up search for two-letter Atomic Symbol<br />
         ToDo: Bring down headers into cells<br />
   </div>
@@ -1370,6 +1371,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Helium" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "He" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 2"  + "<br/>"
         + "Standard Atomic Weight: 4.0026"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
@@ -1381,6 +1384,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Lithium" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Li" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 3"  + "<br/>"
         + "Standard Atomic Weight:  6.94"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
@@ -1392,6 +1397,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Beryllium" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Be" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 4"  + "<br/>"
         + "Standard Atomic Weight: 9.0122"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
@@ -1403,6 +1410,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Boron" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "B" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 5"  + "<br/>"
         + "Standard Atomic Weight:  10.81"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
@@ -1413,6 +1422,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Carbon" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "C" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 6"  + "<br/>"
         + "Standard Atomic Weight:   12.011"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
@@ -1422,7 +1433,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Nitrogen" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "N" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 7"  + "<br/>"
         + "Standard Atomic Weight:   14.007"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
@@ -1433,6 +1446,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Oxygen" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "O" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 8"  + "<br/>"
         + "Standard Atomic Weight:   15.999"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>4</sup>"  + "<br/>"
@@ -1442,7 +1457,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Flourine" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+          + "Atomic Symbol:" + "<strong>" + "F" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 9"  + "<br/>"
         + "Standard Atomic Weight: 18.998"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
@@ -1452,7 +1469,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Neon" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+          + "Atomic Symbol:" + "<strong>" + "Ne" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 10"  + "<br/>"
         + "Standard Atomic Weight: 18.998"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
@@ -1463,6 +1482,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Neon" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Na" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 11"  + "<br/>"
         + "Standard Atomic Weight: 22.990"  + "<br/>"
         + "Ground State Configuration: [Ne]3s"  + "<br/>"
@@ -1473,6 +1494,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Magnesium" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Mg" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 12"  + "<br/>"
         + "Standard Atomic Weight: 24.305"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
@@ -1483,6 +1506,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Aluminum" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Al" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 13"  + "<br/>"
         + "Standard Atomic Weight: 26.982"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p"  + "<br/>"
@@ -1493,6 +1518,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Silicon" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Si" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 14"  + "<br/>"
         + "Standard Atomic Weight:  28.085"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>2</sup>"  + "<br/>"
@@ -1502,7 +1529,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Phosphorus" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "P" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 15"  + "<br/>"
         + "Standard Atomic Weight: 30.974"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>3</sup>"  + "<br/>"
@@ -1512,7 +1541,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Sulfur" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "S" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 16"  + "<br/>"
         + "Standard Atomic Weight:  32.06"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>4</sup>"  + "<br/>"
@@ -1522,7 +1553,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Chlorine" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "Cl" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 17"  + "<br/>"
         + "Standard Atomic Weight: 35.45"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
@@ -1533,7 +1566,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Argon" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "Ar" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 17"  + "<br/>"
         + "Standard Atomic Weight: 39.948"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
