--- a/index.html
+++ b/index.html
@@ -1364,7 +1364,8 @@ var text;
         + "Standard Atomic Weight: 1.008"  + "<br/>"
         + "Ground State Configuration: 1s"  + "<br/>"
         + "Ionization Energy: 13.5984"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
  // If the letter is "helium"
    } else if (letter === "HELIUM") {
         text = "<br/>"
