--- a/index_backup2.html
+++ b/index_backup2.html
@@ -1331,7 +1331,7 @@
  <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 19 February 2020<br />
+        Content: 26 February 2020<br />
         WebAim: 6 February 2020 0<br />
         NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note: Speech Synthesis referenced in builing this page https://www.w3.org/TR/speech-synthesis11/#S1.1<br />
@@ -1340,6 +1340,7 @@
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
         ToDo: Create button for only Atomic # and Atomic Weight<br />
+        ToDo: Add dynamic output two-letter Atomic Symbol<br />
         ToDo: Set up search for two-letter Atomic Symbol<br />
         ToDo: Bring down headers into cells<br />
   </div>
@@ -1357,17 +1358,22 @@ var text;
         + "<br/>"
         + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "H" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 1"  + "<br/>"
         + "Standard Atomic Weight: 1.008"  + "<br/>"
         + "Ground State Configuration: 1s"  + "<br/>"
         + "Ionization Energy: 13.5984"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
  // If the letter is "helium"
    } else if (letter === "HELIUM") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Helium" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "He" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 2"  + "<br/>"
         + "Standard Atomic Weight: 4.0026"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
@@ -1379,6 +1385,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Lithium" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Li" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 3"  + "<br/>"
         + "Standard Atomic Weight:  6.94"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
@@ -1390,6 +1398,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Beryllium" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Be" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 4"  + "<br/>"
         + "Standard Atomic Weight: 9.0122"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
@@ -1401,6 +1411,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Boron" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "B" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 5"  + "<br/>"
         + "Standard Atomic Weight:  10.81"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
@@ -1411,6 +1423,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Carbon" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "C" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 6"  + "<br/>"
         + "Standard Atomic Weight:   12.011"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
@@ -1420,7 +1434,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Nitrogen" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "N" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 7"  + "<br/>"
         + "Standard Atomic Weight:   14.007"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
@@ -1431,6 +1447,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Oxygen" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "O" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 8"  + "<br/>"
         + "Standard Atomic Weight:   15.999"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>4</sup>"  + "<br/>"
@@ -1440,7 +1458,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Flourine" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+          + "Atomic Symbol:" + "<strong>" + "F" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 9"  + "<br/>"
         + "Standard Atomic Weight: 18.998"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
@@ -1450,7 +1470,9 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Neon" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+          + "Atomic Symbol:" + "<strong>" + "Ne" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 10"  + "<br/>"
         + "Standard Atomic Weight: 18.998"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
@@ -1461,6 +1483,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Neon" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Na" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 11"  + "<br/>"
         + "Standard Atomic Weight: 22.990"  + "<br/>"
         + "Ground State Configuration: [Ne]3s"  + "<br/>"
@@ -1471,6 +1495,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Magnesium" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Mg" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 12"  + "<br/>"
         + "Standard Atomic Weight: 24.305"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
@@ -1481,6 +1507,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Aluminum" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Al" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 13"  + "<br/>"
         + "Standard Atomic Weight: 26.982"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p"  + "<br/>"
@@ -1491,6 +1519,8 @@ var text;
         + "<br/>"
         + "<strong>" + "Silicon" + "</strong>"
         + "<br/>" 
+        + "Atomic Symbol:" + "<strong>" + "Si" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 14"  + "<br/>"
         + "Standard Atomic Weight:  28.085"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>2</sup>"  + "<br/>"
@@ -1500,12 +1530,50 @@ var text;
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Phosphorus" + "</strong>"
-        + "<br/>" 
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "P" + "</strong>"
+        + "<br/>"
         + "Atomic Number: 15"  + "<br/>"
         + "Standard Atomic Weight: 30.974"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>3</sup>"  + "<br/>"
         + "Ionization Energy: 10.4867"  + "<br/>"
         + "<br/>";   
+      } else if (letter === "SULFUR") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Sulfur" + "</strong>"
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "S" + "</strong>"
+        + "<br/>"
+        + "Atomic Number: 16"  + "<br/>"
+        + "Standard Atomic Weight:  32.06"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>4</sup>"  + "<br/>"
+        + "Ionization Energy: 10.3600"  + "<br/>"
+        + "<br/>";
+      } else if (letter === "CHLORINE") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Chlorine" + "</strong>"
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "Cl" + "</strong>"
+        + "<br/>"
+        + "Atomic Number: 17"  + "<br/>"
+        + "Standard Atomic Weight: 35.45"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
+        + "Ionization Energy: 12.9676"  + "<br/>"
+        + "<br/>";        
+     } else if (letter === "Next") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Argon" + "</strong>"
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "Ar" + "</strong>"
+        + "<br/>"
+        + "Atomic Number: 17"  + "<br/>"
+        + "Standard Atomic Weight: 39.948"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
+        + "Ionization Energy: 12.9676"  + "<br/>"
+        + "<br/>"; 
         
    // If the letter is anything else
       
